Perfeclty synch live and offline analysis

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -34,7 +34,10 @@
     "\n",
     "rcParams[\"figure.max_open_warning\"] = False\n",
     "rcParams[\"font.family\"] = 'DejaVu Sans'\n",
-    "rcParams[\"font.size\"] = 12"
+    "rcParams[\"font.size\"] = 12\n",
+    "\n",
+    "import rclpy\n",
+    "rclpy.init()"
    ]
   },
   {
@@ -99,7 +102,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_matrix(yvalues, results_matrix, xvalues, no_deco=False, angles=False, log=True):\n",
+    "def plot_matrix(yvalues, results_matrix, gt_values, xvalues=None, no_deco=False, angles=False, log=True):\n",
+    "    if xvalues is None:\n",
+    "        xvalues = gt_values\n",
+    "        \n",
     "    estimates = get_estimates(results_matrix, yvalues)\n",
     "    n_points = results_matrix.shape[1]\n",
     "    fig, ax = plt.subplots()\n",
@@ -113,7 +119,7 @@
     "    )\n",
     "    ax.plot(\n",
     "        np.arange(n_points) + 0.5,\n",
-    "        xvalues,\n",
+    "        gt_values,\n",
     "        color=\"white\",\n",
     "        label=\"ground truth\",\n",
     "        marker='x'\n",
@@ -232,6 +238,15 @@
     "from utils.estimators import DistanceEstimator\n",
     "from utils.moving_estimators import MovingEstimator\n",
     "\n",
+    "# for live analysis\n",
+    "distances_cm = np.arange(100, step=5)\n",
+    "angles_deg = np.arange(360, step=30)\n",
+    "\n",
+    "# for offline analysis\n",
+    "#distances_cm = np.arange(100, step=1)\n",
+    "#angles_deg = np.arange(360, step=2)\n",
+    "\n",
+    "\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "n_calib = 5\n",
     "n_window = 5\n",
@@ -324,10 +339,9 @@
     "            results_matrix = np.full((len(dists_cm), n_points), np.nan)\n",
     "            results_matrix_angles = np.full((len(azimuths_deg), n_points), np.nan)\n",
     "            \n",
-    "            results_matrix_angles_moving = np.full((len(MovingEstimator.ANGLES_DEG), n_points), np.nan)\n",
-    "            results_matrix_moving = np.full((len(MovingEstimator.DISTANCES_CM), n_points), np.nan)\n",
-    "\n",
-    "            moving_estimator = MovingEstimator(n_window=n_window)\n",
+    "            moving_estimator = MovingEstimator(n_window=n_window, distances_cm=distances_cm, angles_deg=angles_deg)\n",
+    "            results_matrix_angles_moving = np.full((len(moving_estimator.angles_deg), n_points), np.nan)\n",
+    "            results_matrix_moving = np.full((len(moving_estimator.distances_cm), n_points), np.nan)\n",
     "            \n",
     "            time_moving = 0\n",
     "            time_single = 0\n",
@@ -376,7 +390,7 @@
     "                # DEBUGGING ONLY\n",
     "                dist = moving_estimator.get_joint_distribution()\n",
     "                fig, ax = plt.subplots()\n",
-    "                pcolorfast_custom(ax, MovingEstimator.DISTANCES_CM, MovingEstimator.ANGLES_DEG, dist)\n",
+    "                pcolorfast_custom(ax, distances_cm, angles_deg, dist)\n",
     "                ax.axvline(distances[i], color='white', ls=':')\n",
     "                ax.axhline(90, color='white', ls=':')\n",
     "\n",
@@ -395,7 +409,7 @@
     "                add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
     "            #save_fig(fig, plot_name + \"_probabilities.pdf\")\n",
     "\n",
-    "            d_estimates_moving = get_estimates(results_matrix_moving, MovingEstimator.DISTANCES_CM)\n",
+    "            d_estimates_moving = get_estimates(results_matrix_moving, distances_cm)\n",
     "            errors_df.loc[len(errors_df), :] = {\n",
     "                \"algorithm\": algorithm + f\"_win{n_window}\",\n",
     "                \"mics\": mics_str,\n",
@@ -405,7 +419,7 @@
     "                \"appendix\": appendix,\n",
     "                \"time\": time_moving / n_points \n",
     "            }\n",
-    "            fig, ax = plot_matrix(MovingEstimator.DISTANCES_CM, results_matrix_moving, distances, no_deco=no_deco)\n",
+    "            fig, ax = plot_matrix(distances_cm, results_matrix_moving, distances, no_deco=no_deco)\n",
     "            if calib_method == 'on_the_fly':\n",
     "                add_rect(ax, n_calib, max(dists_cm), no_deco=no_deco)\n",
     "            #save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")\n",
@@ -418,11 +432,11 @@
     "            if calib_method == 'on_the_fly':\n",
     "                add_rect(ax, n_calib, max(azimuths_deg), no_deco=no_deco)\n",
     "            \n",
-    "            angle_estimates_moving = get_estimates(results_matrix_angles_moving, MovingEstimator.ANGLES_DEG)\n",
-    "            fig, ax = plot_matrix(MovingEstimator.ANGLES_DEG, results_matrix_angles_moving, \n",
+    "            angle_estimates_moving = get_estimates(results_matrix_angles_moving, angles_deg)\n",
+    "            fig, ax = plot_matrix(angles_deg, results_matrix_angles_moving, \n",
     "                                  gt_angles, no_deco=no_deco, log=False, angles=True)\n",
     "            if calib_method == 'on_the_fly':\n",
-    "                add_rect(ax, n_calib, max(MovingEstimator.ANGLES_DEG), no_deco=no_deco)"
+    "                add_rect(ax, n_calib, max(angles_deg), no_deco=no_deco)"
    ]
   },
   {
@@ -453,16 +467,12 @@
     "use_groundtruth = False\n",
     "#use_groundtruth = True \n",
     "\n",
-    "angles_deg = MovingEstimator.ANGLES_DEG\n",
-    "dists_cm = MovingEstimator.DISTANCES_CM\n",
     "dist_matrix = results_matrix_moving\n",
     "angle_matrix = results_matrix_angles_moving\n",
     "n_estimates = 1\n",
     "print(angle_matrix.shape, dist_matrix.shape)\n",
     "\n",
     "# below doesn't work well\n",
-    "#angles_deg = DistanceEstimator.AZIMUTHS_DEG\n",
-    "#dists_cm = DistanceEstimator.DISTANCES_M * 1e2\n",
     "#dist_matrix = results_matrix\n",
     "#angle_matrix = results_matrix_angles\n",
     "#n_estimates = 2\n",
@@ -483,7 +493,7 @@
     "    \n",
     "    distance_gt = int(wall_y_cm - position_cm[1])\n",
     "    if use_groundtruth:\n",
-    "        prob_dists = np.zeros(len(dists_cm))\n",
+    "        prob_dists = np.zeros(len(distances_cm))\n",
     "        prob_dists[distance_gt] = 1.0\n",
     "        \n",
     "        prob_angles = np.zeros(len(angles_deg))\n",
@@ -491,7 +501,7 @@
     "    else:\n",
     "        prob_angles = angle_matrix[:, i]\n",
     "        \n",
-    "    wall_backend.add_planes_from_distributions(dists_cm, prob_dists, \n",
+    "    wall_backend.add_planes_from_distributions(distances_cm, prob_dists, \n",
     "                                               angles_deg, prob_angles, \n",
     "                                               limit_distance=50,\n",
     "                                               n_estimates=n_estimates, \n",
@@ -641,9 +651,16 @@
    "outputs": [],
    "source": [
     "from crazyflie_demo.wall_detection import FLYING_HEIGHT_CM, N_CALIBRATION, N_WINDOW\n",
+    "from crazyflie_demo.wall_detection import WallDetection, LOCAL_DIST_RANGE_CM\n",
+    "import rclpy\n",
+    "\n",
+    "wall_detection = WallDetection()\n",
     "\n",
     "print(N_CALIBRATION, N_WINDOW)\n",
+    "print(min(distances_cm),max(distances_cm))\n",
+    "print(min(angles_deg),max(angles_deg))\n",
     "\n",
+    "plt.ylim(0, 1)\n",
     "exp_name = \"2021_11_23_demo\"\n",
     "motors = \"live\"\n",
     "appendix = \"hover8\"\n",
@@ -662,29 +679,32 @@
     "row = results_df.loc[\n",
     "    (results_df.appendix == appendix) & (results_df.motors == motors), :\n",
     "].iloc[0]\n",
+    "print(row)\n",
     "\n",
     "#distances, freqs, magnitudes, positions_cm, yaws_deg = extract_valid(row, \n",
     "#                                                                     wall_y_cm=wall_y_cm, \n",
     "#                                                                     forward_only=False)\n",
     "positions_cm = row.positions[:, :3] * 1e2\n",
     "flying = positions_cm[:, 2] > FLYING_HEIGHT_CM\n",
+    "print(\"not flying:\", np.where(~flying)[0])\n",
     "positions_cm = positions_cm[flying, :]\n",
     "yaws_deg = row.positions[flying, 3]\n",
     "freqs = row.frequencies_matrix[0, :]\n",
     "magnitudes = np.abs(row.stft[flying][:, :, freqs>0])\n",
+    "signals_f = row.stft[flying][:, :, freqs>0]\n",
     "freqs = freqs[freqs > 0]\n",
     "times = row.seconds[flying]\n",
+    "print(\"first time:\", row.seconds[flying][0])\n",
     "\n",
     "# because wall is at 90 degrees.\n",
     "# TODO: make this statement more general\n",
     "distances = wall_y_cm - positions_cm[:, 1]\n",
     "\n",
-    "angles_deg = MovingEstimator.ANGLES_DEG\n",
-    "dists_cm = MovingEstimator.DISTANCES_CM\n",
     "n_timesteps = magnitudes.shape[0] #-1\n",
     "\n",
     "wall_backend = WallBackend(use_isam=True)\n",
     "d_estimates = []\n",
+    "colors = []\n",
     "angle_estimates = []\n",
     "\n",
     "calib_values = np.median(magnitudes[:N_CALIBRATION, :, :], axis=0)\n",
@@ -697,67 +717,64 @@
     "#save_fig(fig, plot_name)\n",
     "\n",
     "inf_machine = Inference()\n",
-    "inf_machine.add_geometry([dists_cm[0], dists_cm[-1]], WALL_ANGLE_DEG)\n",
+    "inf_machine.add_geometry(LOCAL_DIST_RANGE_CM, WALL_ANGLE_DEG)\n",
     "\n",
-    "magnitudes_calib = magnitudes / calib_values\n",
+    "magnitudes_calib = magnitudes / calib_values[None, :, :]\n",
     "\n",
     "results_matrix_angles = np.full((len(angles_deg), n_timesteps), np.nan)\n",
-    "results_matrix_moving = np.full((len(dists_cm), n_timesteps), np.nan)\n",
+    "results_matrix_moving = np.full((len(distances_cm), n_timesteps), np.nan)\n",
     "\n",
-    "moving_estimator = MovingEstimator(n_window=n_window)\n",
+    "moving_estimator = MovingEstimator(n_window=n_window, distances_cm=distances_cm, angles_deg=angles_deg)\n",
+    "\n",
+    "calib = True\n",
     "for i in range(n_timesteps):\n",
-    "    position_cm = positions_cm[i, :] \n",
     "    \n",
-    "    inf_machine.add_data(magnitudes_calib[i], freqs)\n",
+    "    position_cm = positions_cm[i, :] \n",
     "\n",
-    "    t1 = time.time()\n",
-    "    diff_dict = {}\n",
-    "    for mic_idx in mics:\n",
-    "        __, prob_mic, diff = inf_machine.do_inference(algorithm, mic_idx)\n",
-    "        diff_dict[mic_idx] = (diff, prob_mic)\n",
-    "\n",
-    "    time_single += int(1000*(time.time() - t1))\n",
-    "\n",
-    "    t1 = time.time()\n",
-    "    moving_estimator.add_distributions(\n",
-    "        diff_dict, position_cm=positions_cm[i], rot_deg=yaws_deg[i]\n",
+    "    if i == N_CALIBRATION + 1:\n",
+    "        print(\"change state\")\n",
+    "        calib = False\n",
+    "        \n",
+    "    res = wall_detection.listener_callback_offline(\n",
+    "        signals_f[i].T, freqs, positions_cm[i], yaws_deg[i], calib=calib, timestamp=times[i]*1e3\n",
     "    )\n",
-    "    prob_moving_dist, prob_moving_angle = moving_estimator.get_distributions(local=True)\n",
-    "    time_moving += int(1000*(time.time() - t1))\n",
+    "    if res is None:\n",
+    "        print(\"no results yet\")\n",
+    "        continue\n",
+    "    __, __, prob_moving_dist, prob_moving_angle = res\n",
     "\n",
     "    results_matrix_moving[:, i] = prob_moving_dist\n",
     "    results_matrix_angles[:, i] = prob_moving_angle\n",
     "\n",
-    "    if i < N_CALIBRATION:\n",
+    "    if i <= N_CALIBRATION:\n",
     "        d_estimates.append(None)\n",
     "        angle_estimates.append(None)\n",
+    "        colors.append(\"k\")\n",
     "        continue\n",
     "    \n",
-    "    #print(f\"treating new signal at time {times[i]}\")\n",
-    "        \n",
-    "    # factor graph inference\n",
     "    yaw = yaws_deg[i] / 180 * np.pi\n",
-    "    #print(f\"pose raw message: {position_cm*1e-2, yaws_deg[i]}\")\n",
+    "    pose_factor = wall_backend.add_pose(r_world=positions_cm[i] * 1e-2,  yaw=yaw, verbose=False)\n",
+    "    #wall_backend.add_planes_from_distributions(distances_cm, prob_moving_dist, angles_deg, prob_moving_angle, n_estimates=1, verbose=True)\n",
     "    \n",
-    "    #print(f\"adding pose: {yaws_deg[i]:.1f} deg, ({position_cm[0]:.0f}, {position_cm[1]:.0f}) cm\")\n",
-    "    pose_factor = wall_backend.add_pose(r_world=position_cm * 1e-2,  yaw=yaw, verbose=True)\n",
-    "    #wall_backend.add_planes_from_distributions(dists_cm, prob_moving_dist, angles_deg, prob_moving_angle, n_estimates=1, verbose=True)\n",
-    "    wall_backend.add_plane_from_distances(dists_cm, prob_moving_dist, verbose=True)\n",
+    "    wall_backend.add_plane_from_distances(distances_cm, prob_moving_dist, verbose=False)\n",
     "    #wall_backend.check_wall(verbose=True)\n",
     "    \n",
     "    d_estimate = wall_backend.get_distance_estimate()\n",
     "    angle_deg = wall_backend.get_angle_estimate()\n",
     "    d_estimates.append(d_estimate * 1e2 if d_estimate else None)\n",
+    "    colors.append(f\"C{wall_backend.plane_index+1}\")\n",
     "    angle_estimates.append(angle_deg)\n",
     "\n",
     "gt_angles = np.full(results_matrix_angles.shape[1], 90)\n",
-    "fig, ax = plot_matrix(angles_deg, results_matrix_angles, gt_angles, no_deco=no_deco, angles=True, log=False)\n",
-    "ax.scatter(np.arange(len(angle_estimates)), angle_estimates, color='r')\n",
+    "fig, ax = plot_matrix(angles_deg, results_matrix_angles, gt_angles, xvalues=times[:n_timesteps], \n",
+    "                      no_deco=no_deco, angles=True, log=False)\n",
+    "ax.scatter(np.arange(len(angle_estimates)), angle_estimates, color=colors)\n",
     "add_rect(ax, N_CALIBRATION, max(angles_deg), no_deco=no_deco)\n",
     "\n",
-    "fig, ax = plot_matrix(dists_cm, results_matrix_moving, distances[:n_timesteps], no_deco=no_deco)\n",
-    "ax.scatter(np.arange(len(d_estimates)), d_estimates, color='r')\n",
-    "add_rect(ax, N_CALIBRATION, max(dists_cm), no_deco=no_deco)\n",
+    "fig, ax = plot_matrix(distances_cm, results_matrix_moving, distances[:n_timesteps], xvalues=times[:n_timesteps], \n",
+    "                      no_deco=no_deco)\n",
+    "ax.scatter(np.arange(len(d_estimates)), d_estimates, color=colors)\n",
+    "add_rect(ax, N_CALIBRATION, max(distances_cm), no_deco=no_deco)\n",
     "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
    ]
   },
@@ -784,7 +801,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_projections(wall_backend.result, perspective=False, top=True, side=True, axis_length=0.1)"
+    "plot_projections(wall_backend.result, perspective=False, top=True, side=False, axis_length=0.1)"
    ]
   },
   {
