Add analysis of all experiments

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -656,14 +656,24 @@
     "\n",
     "wall_detection = WallDetection()\n",
     "\n",
-    "print(N_CALIBRATION, N_WINDOW)\n",
-    "print(min(distances_cm),max(distances_cm))\n",
-    "print(min(angles_deg),max(angles_deg))\n",
-    "\n",
     "plt.ylim(0, 1)\n",
     "exp_name = \"2021_11_23_demo\"\n",
+    "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
+    "print(\"available appendices:\", results_df.appendix.values)\n",
     "motors = \"live\"\n",
-    "appendix = \"hover8\"\n",
+    "\n",
+    "# glass wall\n",
+    "#appendix = \"hover1\" # works super well! \n",
+    "#appendix = \"hover3\" # looks good! \n",
+    "#appendix = \"hover5\" # looks quite good! \n",
+    "#appendix = \"hover6\" # looks ok (from here on, velocity is increased)\n",
+    "appendix = \"hover8\" # works well (glass wall), but only detects one wall\n",
+    "\n",
+    "# normal wall\n",
+    "#appendix = \"hover9\" # works not great\n",
+    "#appendix = \"hover10\" # works not great\n",
+    "#appendix = \"hover11\" # works okay\n",
+    "#appendix = \"hover12\" # works okay \n",
     "\n",
     "calib_method = \"on_the_fly\"\n",
     "mics = [0, 1, 2, 3]\n",
@@ -675,11 +685,9 @@
     "wall_y_cm = 100\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "\n",
-    "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
     "row = results_df.loc[\n",
     "    (results_df.appendix == appendix) & (results_df.motors == motors), :\n",
     "].iloc[0]\n",
-    "print(row)\n",
     "\n",
     "#distances, freqs, magnitudes, positions_cm, yaws_deg = extract_valid(row, \n",
     "#                                                                     wall_y_cm=wall_y_cm, \n",
@@ -694,7 +702,6 @@
     "signals_f = row.stft[flying][:, :, freqs>0]\n",
     "freqs = freqs[freqs > 0]\n",
     "times = row.seconds[flying]\n",
-    "print(\"first time:\", row.seconds[flying][0])\n",
     "\n",
     "# because wall is at 90 degrees.\n",
     "# TODO: make this statement more general\n",
@@ -743,14 +750,15 @@
     "        continue\n",
     "    __, __, prob_moving_dist, prob_moving_angle = res\n",
     "\n",
-    "    results_matrix_moving[:, i] = prob_moving_dist\n",
-    "    results_matrix_angles[:, i] = prob_moving_angle\n",
     "\n",
     "    if i <= N_CALIBRATION:\n",
     "        d_estimates.append(None)\n",
     "        angle_estimates.append(None)\n",
     "        colors.append(\"k\")\n",
     "        continue\n",
+    "        \n",
+    "    results_matrix_moving[:, i] = prob_moving_dist\n",
+    "    results_matrix_angles[:, i] = prob_moving_angle\n",
     "    \n",
     "    yaw = yaws_deg[i] / 180 * np.pi\n",
     "    pose_factor = wall_backend.add_pose(r_world=positions_cm[i] * 1e-2,  yaw=yaw, verbose=False)\n",
