Change Actions to Services

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -449,6 +449,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "im = pcolorfast_custom(ax, xs=np.arange(results_matrix_angles.shape[1]), ys=np.arange(results_matrix_angles.shape[0]), values=results_matrix_angles)\n",
+    "axcol = add_colorbar(fig, ax, im, title=\"probability\")\n",
+    "colorbar = fig.colorbar(im, cax=axcol)\n",
+    "im.set_data(results_matrix_angles*2)\n",
+    "#im.set_clim(-0.02, 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
