Replace old bag parser with cleaner version

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -449,20 +449,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "im = pcolorfast_custom(ax, xs=np.arange(results_matrix_angles.shape[1]), ys=np.arange(results_matrix_angles.shape[0]), values=results_matrix_angles)\n",
-    "axcol = add_colorbar(fig, ax, im, title=\"probability\")\n",
-    "colorbar = fig.colorbar(im, cax=axcol)\n",
-    "im.set_data(results_matrix_angles*2)\n",
-    "#im.set_clim(-0.02, 0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -659,22 +645,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from crazyflie_demo.wall_detection import FLYING_HEIGHT_CM, N_CALIBRATION, N_WINDOW\n",
-    "from crazyflie_demo.wall_detection import WallDetection, LOCAL_DIST_RANGE_CM\n",
-    "import rclpy\n",
-    "\n",
-    "wall_detection = WallDetection()\n",
-    "\n",
-    "plt.ylim(0, 1)\n",
     "exp_name = \"2021_11_23_demo\"\n",
     "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
     "print(\"available appendices:\", results_df.appendix.values)\n",
-    "motors = \"live\"\n",
     "\n",
     "# glass wall\n",
     "#appendix = \"hover1\" # works super well! \n",
@@ -688,6 +664,36 @@
     "#appendix = \"hover10\" # works not great\n",
     "#appendix = \"hover11\" # works okay\n",
     "#appendix = \"hover12\" # works okay \n",
+    "wall_y_cm = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exp_name = \"2022_01_25\"\n",
+    "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
+    "print(\"available appendices:\", results_df.appendix.values)\n",
+    "\n",
+    "appendix = \"test24\" # works well (glass wall), but only detects one wall\n",
+    "\n",
+    "wall_y_cm = 80"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "from crazyflie_demo.wall_detection import FLYING_HEIGHT_CM, N_CALIBRATION, N_WINDOW\n",
+    "from crazyflie_demo.wall_detection import WallDetection, LOCAL_DIST_RANGE_CM\n",
+    "\n",
+    "wall_detection = WallDetection()\n",
     "\n",
     "calib_method = \"on_the_fly\"\n",
     "mics = [0, 1, 2, 3]\n",
@@ -696,12 +702,9 @@
     "#mics = [2] # back\n",
     "algorithm = \"bayes\" #\"cost\" #\"bayes\"\n",
     "\n",
-    "wall_y_cm = 100\n",
     "azimuth_deg = WALL_ANGLE_DEG\n",
     "\n",
-    "row = results_df.loc[\n",
-    "    (results_df.appendix == appendix) & (results_df.motors == motors), :\n",
-    "].iloc[0]\n",
+    "row = results_df.loc[results_df.appendix == appendix,:].iloc[0]\n",
     "\n",
     "#distances, freqs, magnitudes, positions_cm, yaws_deg = extract_valid(row, \n",
     "#                                                                     wall_y_cm=wall_y_cm, \n",
