Fix demo playback

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -677,7 +677,8 @@
     "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
     "print(\"available appendices:\", results_df.appendix.values)\n",
     "\n",
-    "appendix = \"test24\" # works well (glass wall), but only detects one wall\n",
+    "appendix = \"test24\"  # works ok\n",
+    "#appendix = \"test25\"  # doesn't work\n",
     "\n",
     "wall_y_cm = 80"
    ]
@@ -710,9 +711,10 @@
     "#                                                                     wall_y_cm=wall_y_cm, \n",
     "#                                                                     forward_only=False)\n",
     "positions_cm = row.positions[:, :3] * 1e2\n",
-    "flying = positions_cm[:, 2] > FLYING_HEIGHT_CM\n",
+    "flying = (positions_cm[:, 2] > FLYING_HEIGHT_CM) & (positions_cm[:, 2] < 100)\n",
     "print(\"not flying:\", np.where(~flying)[0])\n",
     "positions_cm = positions_cm[flying, :]\n",
+    "#print(positions_cm)\n",
     "yaws_deg = row.positions[flying, 3]\n",
     "freqs = row.frequencies_matrix[0, :]\n",
     "magnitudes = np.abs(row.stft[flying][:, :, freqs>0])\n",
@@ -736,7 +738,7 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
-    "plot_positions(ax, positions_cm[positions_cm[:, 2] > FLYING_HEIGHT_CM], wall_y_cm=wall_y_cm)\n",
+    "plot_positions(ax, positions_cm, wall_y_cm=wall_y_cm)\n",
     "plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\"\n",
     "#save_fig(fig, plot_name)\n",
     "\n",
@@ -748,7 +750,7 @@
     "results_matrix_angles = np.full((len(angles_deg), n_timesteps), np.nan)\n",
     "results_matrix_moving = np.full((len(distances_cm), n_timesteps), np.nan)\n",
     "\n",
-    "moving_estimator = MovingEstimator(n_window=n_window, distances_cm=distances_cm, angles_deg=angles_deg)\n",
+    "moving_estimator = MovingEstimator(n_window=n_window) #distances_cm=distances_cm, angles_deg=angles_deg)\n",
     "\n",
     "calib = True\n",
     "for i in range(n_timesteps):\n",
@@ -762,17 +764,19 @@
     "    res = wall_detection.listener_callback_offline(\n",
     "        signals_f[i].T, freqs, positions_cm[i], yaws_deg[i], calib=calib, timestamp=times[i]*1e3\n",
     "    )\n",
-    "    if res is None:\n",
-    "        print(\"no results yet\")\n",
-    "        continue\n",
-    "    __, __, prob_moving_dist, prob_moving_angle = res\n",
-    "\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    if i <= N_CALIBRATION:\n",
     "        d_estimates.append(None)\n",
     "        angle_estimates.append(None)\n",
     "        colors.append(\"k\")\n",
     "        continue\n",
+    "        \n",
+    "    if res is None:\n",
+    "        print(\"no result yet!\")\n",
+    "        \n",
+    "    __, __, prob_moving_dist, prob_moving_angle = res\n",
+    "\n",
     "        \n",
     "    results_matrix_moving[:, i] = prob_moving_dist\n",
     "    results_matrix_angles[:, i] = prob_moving_angle\n",
