Change moving estimator to local, add angle simplification

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -103,6 +103,7 @@
    "outputs": [],
    "source": [
     "def plot_matrix(yvalues, results_matrix, gt_values, xvalues=None, no_deco=False, angles=False, log=True):\n",
+    "    from utils.plotting_tools import add_colorbar, pcolorfast_custom, FIGSIZE\n",
     "    if xvalues is None:\n",
     "        xvalues = gt_values\n",
     "        \n",
@@ -164,15 +165,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Single wall approach experiments\n",
-    "\n",
-    "### Qualitative evaluation"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -211,10 +203,20 @@
     "\n",
     "\n",
     "def add_rect(ax, width, height, no_deco=False):\n",
+    "    from matplotlib.patches import Rectangle\n",
     "    rect = Rectangle((0, 0), width, height, facecolor='white', alpha=0.5)\n",
     "    ax.add_patch(rect)\n",
     "    if not no_deco:\n",
     "        ax.text(width/2, 7, \"used for\\ncalibration\", fontdict={'color':'white', 'ha':'center', 'va':'bottom'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Single wall approach experiments\n",
+    "\n",
+    "### Qualitative evaluation"
    ]
   },
   {
@@ -228,11 +230,9 @@
     "from copy import deepcopy\n",
     "import itertools\n",
     "import time\n",
-    "from matplotlib.patches import Rectangle\n",
     "\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "from utils.plotting_tools import pcolorfast_custom, FIGSIZE, save_fig\n",
-    "from utils.plotting_tools import add_colorbar\n",
     "from utils.plotting_tools import plot_performance\n",
     "from utils.inference import Inference, eps_normalize\n",
     "from utils.estimators import DistanceEstimator\n",
@@ -686,35 +686,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from crazyflie_demo.wall_detection import FLYING_HEIGHT_CM, N_CALIBRATION, N_WINDOW\n",
-    "from crazyflie_demo.wall_detection import WallDetection, LOCAL_DIST_RANGE_CM\n",
+    "exp_name = \"2022_01_27_demo\"\n",
+    "results_df = pd.read_pickle(f\"../datasets/{exp_name}/all_data.pkl\")\n",
+    "print(\"available appendices:\", results_df.appendix.values)\n",
     "\n",
-    "wall_detection = WallDetection()\n",
+    "#appendix = \"test3\" # works ok\n",
+    "appendix = \"test4\"  # works ok\n",
     "\n",
-    "calib_method = \"on_the_fly\"\n",
-    "mics = [0, 1, 2, 3]\n",
-    "#mics = [3] # towards\n",
-    "#mics = [0] # towards\n",
-    "#mics = [2] # back\n",
-    "algorithm = \"bayes\" #\"cost\" #\"bayes\"\n",
-    "\n",
-    "azimuth_deg = WALL_ANGLE_DEG\n",
+    "wall_y_cm = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.plotting_tools import FIGSIZE, save_fig, add_colorbar\n",
     "\n",
     "row = results_df.loc[results_df.appendix == appendix,:].iloc[0]\n",
     "\n",
-    "#distances, freqs, magnitudes, positions_cm, yaws_deg = extract_valid(row, \n",
-    "#                                                                     wall_y_cm=wall_y_cm, \n",
-    "#                                                                     forward_only=False)\n",
     "positions_cm = row.positions[:, :3] * 1e2\n",
     "flying = (positions_cm[:, 2] > FLYING_HEIGHT_CM) & (positions_cm[:, 2] < 100)\n",
     "print(\"not flying:\", np.where(~flying)[0])\n",
     "positions_cm = positions_cm[flying, :]\n",
-    "#print(positions_cm)\n",
     "yaws_deg = row.positions[flying, 3]\n",
     "freqs = row.frequencies_matrix[0, :]\n",
     "magnitudes = np.abs(row.stft[flying][:, :, freqs>0])\n",
@@ -722,44 +720,55 @@
     "freqs = freqs[freqs > 0]\n",
     "times = row.seconds[flying]\n",
     "\n",
+    "n_timesteps = magnitudes.shape[0] #-1\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
+    "plot_positions(ax, positions_cm[:n_timesteps, :], wall_y_cm=wall_y_cm)\n",
+    "plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from audio_gtsam.wall_backend import WallBackend\n",
+    "from crazyflie_demo.wall_detection import WallDetection, DISTANCES_CM, ANGLES_DEG, N_CALIBRATION\n",
+    "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
+    "\n",
+    "no_deco = False\n",
+    "wall_detection = WallDetection()\n",
+    "calib_method = \"on_the_fly\"\n",
+    "mics = [0, 1, 2, 3]\n",
+    "#mics = [3] # towards\n",
+    "#mics = [0] # towards\n",
+    "#mics = [2] # back\n",
+    "algorithm = \"bayes\" #\"cost\" #\"bayes\"\n",
+    "#save_fig(fig, plot_name)\n",
     "# because wall is at 90 degrees.\n",
     "# TODO: make this statement more general\n",
     "distances = wall_y_cm - positions_cm[:, 1]\n",
-    "\n",
-    "n_timesteps = magnitudes.shape[0] #-1\n",
     "\n",
     "wall_backend = WallBackend(use_isam=True)\n",
     "d_estimates = []\n",
     "colors = []\n",
     "angle_estimates = []\n",
+    "angles_forward = []\n",
     "\n",
-    "calib_values = np.median(magnitudes[:N_CALIBRATION, :, :], axis=0)\n",
-    "std_values = np.std(magnitudes[:N_CALIBRATION, :, :], axis=0)\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "fig.set_size_inches(FIGSIZE, FIGSIZE)\n",
-    "plot_positions(ax, positions_cm, wall_y_cm=wall_y_cm)\n",
-    "plot_name = f\"plots/experiments/{exp_name}{appendix}_positions.pdf\"\n",
-    "#save_fig(fig, plot_name)\n",
-    "\n",
-    "inf_machine = Inference()\n",
-    "inf_machine.add_geometry(LOCAL_DIST_RANGE_CM, WALL_ANGLE_DEG)\n",
-    "\n",
-    "magnitudes_calib = magnitudes / calib_values[None, :, :]\n",
-    "\n",
-    "results_matrix_angles = np.full((len(angles_deg), n_timesteps), np.nan)\n",
-    "results_matrix_moving = np.full((len(distances_cm), n_timesteps), np.nan)\n",
-    "\n",
-    "moving_estimator = MovingEstimator(n_window=n_window) #distances_cm=distances_cm, angles_deg=angles_deg)\n",
+    "results_matrix_angles = np.full((len(ANGLES_DEG), n_timesteps), np.nan)\n",
+    "results_matrix_moving = np.full((len(DISTANCES_CM), n_timesteps), np.nan)\n",
     "\n",
     "calib = True\n",
     "for i in range(n_timesteps):\n",
     "    \n",
     "    position_cm = positions_cm[i, :] \n",
     "\n",
-    "    if i == N_CALIBRATION + 1:\n",
+    "    if i == N_CALIBRATION:\n",
     "        print(\"change state\")\n",
     "        calib = False\n",
+    "        \n",
     "        \n",
     "    res = wall_detection.listener_callback_offline(\n",
     "        signals_f[i].T, freqs, positions_cm[i], yaws_deg[i], calib=calib, timestamp=times[i]*1e3\n",
@@ -769,17 +778,21 @@
     "    if i <= N_CALIBRATION:\n",
     "        d_estimates.append(None)\n",
     "        angle_estimates.append(None)\n",
+    "        angles_forward.append(None)\n",
     "        colors.append(\"k\")\n",
     "        continue\n",
     "        \n",
     "    if res is None:\n",
     "        print(\"no result yet!\")\n",
     "        \n",
+    "    angle_local = wall_detection.moving_estimator.get_local_forward_angle()\n",
+    "    angles_forward.append(angle_local)\n",
+    "        \n",
     "    __, __, prob_moving_dist, prob_moving_angle = res\n",
     "\n",
     "        \n",
     "    results_matrix_moving[:, i] = prob_moving_dist\n",
-    "    results_matrix_angles[:, i] = prob_moving_angle\n",
+    "    #results_matrix_angles[:, i] = prob_moving_angle\n",
     "    \n",
     "    yaw = yaws_deg[i] / 180 * np.pi\n",
     "    pose_factor = wall_backend.add_pose(r_world=positions_cm[i] * 1e-2,  yaw=yaw, verbose=False)\n",
@@ -792,19 +805,47 @@
     "    angle_deg = wall_backend.get_angle_estimate()\n",
     "    d_estimates.append(d_estimate * 1e2 if d_estimate else None)\n",
     "    colors.append(f\"C{wall_backend.plane_index+1}\")\n",
-    "    angle_estimates.append(angle_deg)\n",
-    "\n",
-    "gt_angles = np.full(results_matrix_angles.shape[1], 90)\n",
-    "fig, ax = plot_matrix(angles_deg, results_matrix_angles, gt_angles, xvalues=times[:n_timesteps], \n",
-    "                      no_deco=no_deco, angles=True, log=False)\n",
-    "ax.scatter(np.arange(len(angle_estimates)), angle_estimates, color=colors)\n",
-    "add_rect(ax, N_CALIBRATION, max(angles_deg), no_deco=no_deco)\n",
-    "\n",
-    "fig, ax = plot_matrix(distances_cm, results_matrix_moving, distances[:n_timesteps], xvalues=times[:n_timesteps], \n",
+    "    angle_estimates.append(angle_deg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(times[:n_timesteps], angles_forward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plot_matrix(DISTANCES_CM, results_matrix_moving, distances[:n_timesteps], xvalues=times[:n_timesteps], \n",
     "                      no_deco=no_deco)\n",
+    "fig.set_size_inches(20, 10)\n",
     "ax.scatter(np.arange(len(d_estimates)), d_estimates, color=colors)\n",
     "add_rect(ax, N_CALIBRATION, max(distances_cm), no_deco=no_deco)\n",
     "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_deco = False\n",
+    "gt_angles = np.full(results_matrix_angles.shape[1], 90)\n",
+    "fig, ax = plot_matrix(ANGLES_DEG, results_matrix_angles, gt_angles, xvalues=times[:n_timesteps], \n",
+    "                      no_deco=no_deco, angles=True, log=False)\n",
+    "fig.set_size_inches(20, 10)\n",
+    "ax.scatter(np.arange(len(angle_estimates)), angle_estimates, color=colors)\n",
+    "add_rect(ax, N_CALIBRATION, max(angles_deg), no_deco=no_deco)"
    ]
   },
   {
