Add alternatives to peak detection (max, mean)

--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -102,12 +102,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_estimates_here(results_matrix, dists_cm):\n",
+    "    valid = np.any(results_matrix > 0, axis=0)\n",
+    "    d_estimates = dists_cm[np.argmax(results_matrix, axis=0)].astype(float)\n",
+    "    d_estimates[~valid] = np.nan\n",
+    "    return d_estimates\n",
+    "\n",
     "def plot_matrix(yvalues, results_matrix, gt_values, xvalues=None, no_deco=False, angles=False, log=True):\n",
     "    from utils.plotting_tools import add_colorbar, pcolorfast_custom, FIGSIZE\n",
     "    if xvalues is None:\n",
     "        xvalues = gt_values\n",
     "        \n",
-    "    estimates = get_estimates(results_matrix, yvalues)\n",
+    "    estimates = get_estimates_here(results_matrix, yvalues)\n",
     "    n_points = results_matrix.shape[1]\n",
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(2 * FIGSIZE, FIGSIZE)\n",
@@ -156,12 +162,7 @@
     "        ax.set_yticks(np.arange(min(yvalues), max(yvalues), step=10))\n",
     "        ax.set_yticklabels(np.arange(min(yvalues), max(yvalues), step=10).astype(int))\n",
     "    return fig, ax\n",
-    "\n",
-    "def get_estimates(results_matrix, dists_cm):\n",
-    "    valid = np.any(results_matrix > 0, axis=0)\n",
-    "    d_estimates = dists_cm[np.argmax(results_matrix, axis=0)].astype(float)\n",
-    "    d_estimates[~valid] = np.nan\n",
-    "    return d_estimates"
+    "\n"
    ]
   },
   {
@@ -706,6 +707,7 @@
    "outputs": [],
    "source": [
     "from utils.plotting_tools import FIGSIZE, save_fig, add_colorbar\n",
+    "from crazyflie_demo.wall_detection import FLYING_HEIGHT_CM\n",
     "\n",
     "row = results_df.loc[results_df.appendix == appendix,:].iloc[0]\n",
     "\n",
@@ -735,6 +737,7 @@
    "outputs": [],
    "source": [
     "from audio_gtsam.wall_backend import WallBackend\n",
+    "from utils.moving_estimators import get_estimates\n",
     "from crazyflie_demo.wall_detection import WallDetection, DISTANCES_CM, ANGLES_DEG, N_CALIBRATION\n",
     "from crazyflie_description_py.experiments import WALL_ANGLE_DEG\n",
     "\n",
@@ -751,8 +754,11 @@
     "# TODO: make this statement more general\n",
     "distances = wall_y_cm - positions_cm[:, 1]\n",
     "\n",
+    "estimation_method = \"peak\"\n",
+    "\n",
     "wall_backend = WallBackend(use_isam=True)\n",
     "d_estimates = []\n",
+    "raw_d_estimates = []\n",
     "colors = []\n",
     "angle_estimates = []\n",
     "angles_forward = []\n",
@@ -798,7 +804,11 @@
     "    pose_factor = wall_backend.add_pose(r_world=positions_cm[i] * 1e-2,  yaw=yaw, verbose=False)\n",
     "    #wall_backend.add_planes_from_distributions(distances_cm, prob_moving_dist, angles_deg, prob_moving_angle, n_estimates=1, verbose=True)\n",
     "    \n",
-    "    wall_backend.add_plane_from_distances(distances_cm, prob_moving_dist, verbose=False)\n",
+    "    raw_d_estimates.append({\n",
+    "        method: get_estimates(DISTANCES_CM, prob_moving_dist, n_estimates=1, method=method) for method in [\"mean\", \"max\", \"peak\"]\n",
+    "    })\n",
+    "    \n",
+    "    wall_backend.add_plane_from_distances(DISTANCES_CM, prob_moving_dist, verbose=False, method=estimation_method)\n",
     "    #wall_backend.check_wall(verbose=True)\n",
     "    \n",
     "    d_estimate = wall_backend.get_distance_estimate()\n",
@@ -820,6 +830,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors_dict = {method: f\"C{i}\" for i, method in enumerate(raw_d_estimates[0].keys())}\n",
+    "fig, axs = plt.subplots(1, 2)\n",
+    "fig.set_size_inches(10, 5)\n",
+    "[axs[0].scatter([], [], label=method, color=color) for method, color in colors_dict.items()]\n",
+    "for i, dicts in enumerate(raw_d_estimates):\n",
+    "    for method, estimate in dicts.items():\n",
+    "        axs[0].scatter(i, estimate[0], color=colors_dict[method])\n",
+    "        axs[1].scatter(i, estimate[1], color=colors_dict[method])\n",
+    "axs[0].legend()\n",
+    "axs[1].set_yscale('log')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -829,7 +857,7 @@
     "                      no_deco=no_deco)\n",
     "fig.set_size_inches(20, 10)\n",
     "ax.scatter(np.arange(len(d_estimates)), d_estimates, color=colors)\n",
-    "add_rect(ax, N_CALIBRATION, max(distances_cm), no_deco=no_deco)\n",
+    "add_rect(ax, N_CALIBRATION, max(DISTANCES_CM), no_deco=no_deco)\n",
     "#save_fig(fig, plot_name + f\"_win{n_window}_probabilities.pdf\")"
    ]
   },
